# aws-iot-steel

./: .gitignore  CARGO_DENY_VERSION_FIX.md  CHANGELOG.md  Cargo.toml  ESP32_TOOLCHAIN_STATUS.md  GITHUB_ACTIONS_SETUP.md  LICENSE  MACOS_CI_FIX_COMPLETE.md  MACOS_PLATFORM_IMPLEMENTATION.md  Makefile  README.md  RUST_VERSION_FIX.md  RUST_VERSION_UPDATE.md  TESTING.md  deny.toml  rust-toolchain.toml
.github/: CODEOWNERS  README.md  dependabot.yml
.github/workflows/: build.yml  ci.yml  coverage.yml  security.yml  steel-programs.yml
.kiro/specs/aws-iot-steel/: README.md  build-requirements.md  design.md  functional-requirements.md  requirements.md  tasks.md
aws-infrastructure/: README.md
aws-infrastructure/cloudformation/: codepipeline-infrastructure.yaml  core-iot-infrastructure.yaml  s3-lambda-infrastructure.yaml
aws-infrastructure/scripts/: cleanup-infrastructure.sh  deploy-all-infrastructure.sh  deploy-codepipeline.sh  deploy-core-infrastructure.sh  deploy-s3-lambda.sh  provision-device-automated.sh  provision-device.sh  rollback-deployment.sh
aws-infrastructure/tests/: run-all-tests.sh  test-codepipeline.sh  test-lambda-function.py  test-s3-upload.sh  validate-templates.sh
aws-iot-core/: Cargo.toml
aws-iot-core/examples/steel/: blink_led.scm  interactive_demo.scm  system_monitor.scm
aws-iot-core/src/: device_provisioning.rs  embedded_steel_runtime.rs  error.rs  hal.rs  iot_client.rs  lib.rs  log_aggregation.rs  logging.rs  monitoring_dashboard.rs  operational_runbooks.rs  ota_manager.rs  program_delivery.rs  rust_api.rs  security.rs  shadow_manager.rs  steel_api_documentation.rs  steel_program_debugger.rs  steel_program_packager.rs  steel_program_simulator.rs  steel_program_validator.rs  steel_runtime.rs  steel_test_runner.rs  types.rs
aws-iot-core/tests/: integration_iot_connectivity.rs  integration_led.rs  integration_logging.rs  integration_ota_updates.rs  integration_program_delivery.rs  integration_security.rs  integration_shadow_functionality.rs  integration_sleep.rs  integration_system_info.rs
aws-iot-core/tests/common/: mod.rs
aws-iot-core/tests/fixtures/: test_cert.pem
aws-iot-core/tests/steel/: test_complex_operations.scm  test_device_info.scm  test_integration.scm  test_led.scm  test_led_control.scm  test_logging.scm  test_sleep.scm  test_sleep_function.scm  test_system_info.scm
aws-iot-platform-esp32/: Cargo.toml  README.md  sdkconfig.defaults
aws-iot-platform-esp32/.cargo/: config.toml
aws-iot-platform-esp32/src/: esp32_hardware.rs  esp32_stub.rs  hal.rs  hardware_tests.rs  lib.rs
aws-iot-platform-linux/: Cargo.toml
aws-iot-platform-linux/src/: hal.rs  lib.rs  system_monitor.rs
aws-iot-platform-macos/: Cargo.toml
aws-iot-platform-macos/src/: hal.rs  lib.rs  system_monitor.rs
aws-iot-tests/: Cargo.toml
aws-iot-tests/src/: end_to_end_validation.rs  error_handling_tests.rs  hal_tests.rs  integration_tests.rs  iot_integration_tests.rs  lib.rs  load_testing.rs  mock_hal.rs  mock_iot_client.rs  mock_steel_runtime.rs  property_based_tests.rs  security_validation.rs  steel_api_tests.rs  steel_runtime_tests.rs
docs/: ARTIFACT_MANAGEMENT.md  CHANGELOG.md  README.md  TESTING.md  esp32-troubleshooting.md  github-actions-setup.md  local-ci-setup.md
examples/: Cargo.toml  basic_hal_demo.rs  linux_ci_demo.rs  macos_system_demo.rs
examples/steel/: blink_led.scm
production/: README.md
production/config/: production.toml  staging.toml
production/docs/: disaster-recovery-plan.md  production-deployment-guide.md  steel-programming-guide.md
production/monitoring/: cloudwatch-alarms.yaml  cloudwatch-dashboard.json
production/scripts/: deploy-production.sh
scripts/: esp32-status.sh  fix-rust-version.sh  install-espup-binary.sh  local-ci.sh  pre-push.sh  quick-check.sh  setup-esp32-macos.sh  setup-github-actions.sh  setup-local-ci.sh  sign-firmware.sh  skip-esp32-setup.sh  test-esp32-build.sh  test-examples.sh  update-badges.sh  upload-to-aws.sh  validate-artifacts.sh
tests/steel/: test_led_control.scm
