[package]
name = "aws-iot-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core interfaces and types for AWS IoT Steel module"

[[bin]]
name = "test_runner"
path = "src/bin/test_runner.rs"

[[bin]]
name = "steel_test"
path = "src/bin/steel_test.rs"

[[bin]]
name = "steel_example"
path = "src/bin/steel_example.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
steel-core = { version = "0.7", package = "steel-core" }
parking_lot = "0.12"
clap = "4.0"