[package]
name = "aws-iot-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core interfaces and types for AWS IoT Steel module"

[[bin]]
name = "test_runner"
path = "src/bin/test_runner.rs"

[[bin]]
name = "steel_test"
path = "src/bin/steel_test.rs"

[[bin]]
name = "steel_example"
path = "src/bin/steel_example.rs"

[[bin]]
name = "test_aggregator"
path = "src/bin/test_aggregator.rs"

[[bin]]
name = "embedded_steel_benchmark"
path = "src/bin/embedded_steel_benchmark.rs"

[[bin]]
name = "steel_dev_tools"
path = "src/bin/steel_dev_tools.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
async-trait = "0.1"
steel-core = { version = "0.7", package = "steel-core" }
parking_lot = "0.12"
clap = { version = "4.0", features = ["derive"] }

# AWS IoT dependencies
aws-config = "1.1"
aws-sdk-iot = "1.13"
aws-sdk-iotdataplane = "1.13"
rumqttc = "0.24"
rustls = "0.22"
rustls-pemfile = "2.0"
webpki-roots = "0.26"
url = "2.5"
base64 = "0.22"
sha2 = "0.10"

# Security and cryptography dependencies
ring = "0.17"
x509-parser = "0.16"
der-parser = "10.0"
pem = "3.0"
rand = "0.9"
hex = "0.4"
rustls-native-certs = "0.7"

# HTTP client for OTA downloads
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"

# Embedded-specific dependencies
heapless = "0.9"

# Development tools dependencies
tempfile = "3.8"
regex = "1.10"