[package]
name = "aws-iot-platform-esp32"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "ESP32-C3-DevKit-RUST-1 platform implementation for AWS IoT Steel module"

[dependencies]
aws-iot-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"

# ESP32-C3-specific dependencies (conditional compilation for target)
[target.'cfg(target_arch = "riscv32")'.dependencies]
esp-idf-sys = { version = "0.36", features = ["binstart"] }
esp-idf-hal = "0.42"
embedded-hal = "0.2"

log = "0.4"
nb = "1.0"
heapless = "0.9"

# For non-ESP32 targets, provide stub implementations
[target.'cfg(not(target_arch = "riscv32"))'.dependencies]
log = "0.4"

# Dependencies for binaries and tests
tokio = { workspace = true }
env_logger = "0.10"