[package]
name = "aws-iot-platform-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aws-iot-core = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

# Linux-specific dependencies
nix = "0.27"
procfs = "0.16"
sysinfo = "0.30"

[dev-dependencies]
tempfile = "3.8"