[package]
name = "aws-iot-platform-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "macOS platform implementation for AWS IoT Steel module"

[dependencies]
aws-iot-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.3"