[package]
name = "aws-iot-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Test suite for AWS IoT Steel module"

[[bin]]
name = "integration_test_runner"
path = "src/bin/integration_test_runner.rs"

[[bin]]
name = "end_to_end_validator"
path = "src/bin/end_to_end_validator.rs"

[dependencies]
aws-iot-core = { workspace = true }
aws-iot-platform-macos = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
async-trait = "0.1"
mockall = "0.13"
rand = "0.9"
clap = "4.0"
rumqttc = "0.24"
futures = "0.3"
env_logger = "0.10"