[package]
name = "aws-iot-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Example applications for AWS IoT Steel module"

[features]
default = []

[[bin]]
name = "basic_hal_demo"
path = "basic_hal_demo.rs"

[[bin]]
name = "macos_system_demo"
path = "macos_system_demo.rs"

[dependencies]
aws-iot-core = { path = "../aws-iot-core" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
aws-iot-platform-macos = { path = "../aws-iot-platform-macos" }

[target.'cfg(target_os = "linux")'.dependencies]
aws-iot-platform-linux = { path = "../aws-iot-platform-linux" }